# client/public/swagger.yaml
@@ -12,6 +12,8 @@ tags:
     description: Executables module
   - name: Tag
     description: Tags module
+  - name: Insight
+    description: Insights module
 servers:
   - url: http://127.0.0.1:43801/{basePath}
     variables:
@@ -21,6 +23,24 @@ servers:
 security:
   - tokenAuth:
 paths:
+  "/insights":
+    post:
+      operationId: getInsights
+      summary: get one or all insights
+      tags:
+        - Insight
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                experiment_name:
+                  type: string
+                commit_id:
+                  type: string
+                insight_name:
+                  type: string
   "/tags/list":
     get:
       operationId: getTags
